[package]
name = "nbdkit"
version = "0.2.0"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "BSD-2-Clause"
edition = "2018"
readme = "README.md"
repository = "https://gitlab.com/nbdkit/nbdkit"
categories = ["api-bindings", "filesystem"]
keywords = ["network-block-device", "nbd"]
homepage = "http://libguestfs.org/"
exclude = ["nbdkit-rust-plugin.*", "Makefile*", "test.sh", "Cargo.lock.msrv"]
description = """
Rust bindings to the NBDKit framework for creating Network Block Device servers
"""

[package.metadata.docs.rs]
features = ["nix"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitflags = "1.3.0"
libc = "0.2.71"
nix = { version = "0.24.1", default-features = false, features = ["net", "socket"], optional=true }


[dev-dependencies]
errno = "0.2.5"
lazy_static = "1.2.0"
memoffset = "0.6.3"
mockall = "0.11.0"

[[example]]
name = "ramdisk"
crate-type = ["cdylib"]
